python auto push

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -30,7 +30,7 @@
 
 </script>
 
-<script>
+<!-- <script>
 !function(){
 function n(n,e,t){
 return n.getAttribute(e)||t
@@ -79,4 +79,4 @@ setTimeout(function(){i()},100)
 
 
 
-</script>
+</script> -->
